--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ p {
     margin: 0;
 }
 
-.btn-orderBy {
+.btn-orderBy, .btn-filterBy {
     font-weight: 700;
     font-size: 28px;
     color:rgb(100, 121, 237)
